turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:53: error: not found: value R
    		rule = Array( Array( Array(1,R,0), Array(1,R,1), Array(0,NOTURN,0), Array(0,NOTURN,1) ) );
                                             ^